core/colorpipeline: add a clamping operation

Does exactly what it says. It's needed to ensure the shader and KMS behave the
same: clamping the output to the screen's configured max luminance.
To prevent performance regressions, the clamping operation is only added if
necessary - which it generally isn't with normal SDR content buffers.

BUG: 513895